@@ -8,6 +8,10 @@ files.
 
 1.3.0rc1
 ---------
+  + Command changes:
+
+      MDTM now always returns times in GTM, regardless of TimesGMT setting
+
   + New configuration directives:
 
       DisplayChdir
@@ -68,4 +72,4 @@ files.
 
       SQLHomedirOnDemand
 
-Last Updated: $Date: 2006-06-14 23:50:45 $
+Last Updated: $Date: 2006-06-15 00:26:25 $
