@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.766 2006-06-14 23:50:45 castaglia Exp $
+$Id: NEWS,v 1.767 2006-06-15 00:26:25 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -72,6 +72,8 @@ CVS
   directive, SQLOption, has been added.  One possible parameter of this
   directive is 'useNormalizedGroupSchema', in which case mod_sql will
   process the group info table in a more efficient manner.
+- Bug 2798 - MDTM should return time in GMT.  MDTM responses now always
+  use GMT.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
